--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,8 +1,10 @@
 ---
-repositories:
-  - name: ui-helm
-    url: git+https://github.com/sg31011991/helmfiledemo@ui-helm?ref=main
 releases:
-  - name: ui-helm
-    chart: ui-helm/ui-helm
+
+  - name: ui
+    chart: ./ui-helm
+    installed: true
+  - name: helloworld
+    chart: ./helloworld
     installed: false 
+
