--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -18,6 +18,8 @@ spec:
         - name: {{ .Values.container.name | quote}}
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            POSTGRESQL_PASSWORD: "Password@123"
           ports:
             - containerPort: {{ .Values.service.targetport }}
           
