--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,7 +19,8 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            POSTGRESQL_PASSWORD: "Password@123"
+            - name: POSTGRESQL_PASSWORD
+              value: "Password@123"
           ports:
             - containerPort: {{ .Values.service.targetport }}
           
