--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         {{- include "ui-helm.selectorLabels" . | nindent 8 }}
     spec:
       containers:
-        - name: {{  .Values.container.name | quote }}
+        - name: {{  .Values.container.name }}-{{ .Values.image.repository }}
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
