--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,8 +19,12 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: POSTGRESQL_PASSWORD
-              value: "Password@123"
+             {{- range .Values }}
+              - name: {{ .name }}
+                value: {{ .value }}
+             {{- end }} 
+          #  - name: POSTGRESQL_PASSWORD
+           #   value: "Password@123"
           ports:
             - containerPort: {{ .Values.service.targetport }}
           
