--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,9 +19,8 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{- range .Values.examplemap }}
-            - name: {{ .name }}
-              #value: {{ .value }}
+            - name: {{ .Values.env.name }}
+              value: {{ .Values.env.value }}
             {{- end }} 
           #  - name: POSTGRESQL_PASSWORD
            #   value: "Password@123"
