--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,11 +19,11 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: {{ .Values.env.name }}
-              value: {{ .Values.env.value }}
-            {{- end }} 
-          #  - name: POSTGRESQL_PASSWORD
-           #   value: "Password@123"
+            #- name: {{ .Values.env.name }}
+            #  value: {{ .Values.env.value }}
+            #{{- end }} 
+            - name: POSTGRESQL_PASSWORD
+              value: "Password@123"
           ports:
             - containerPort: {{ .Values.service.targetport }}
           
