--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-             - name : {{ .Values.env.name | quote }}
-               value: {{ .Values.env.value | quote }}
+            {{ .Values.env.name | quote }}
+            {{ .Values.env.value | quote }}
             #- name: POSTGRESQL_PASSWORD
              # value: "Password@123"
           ports:
