--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{ - include .Values.examplemap }}         --Iteration begins over here
+            {{ - range .Values.examplemap }}         --Iteration begins over here
             - name: {{ .name }}
               value: {{ .value }}
             {{- end }}   
