--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,10 +19,9 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{ - range .Values.examplemap }}         --Iteration begins over here
-            - name: {{ .name }}
-              value: {{ .value }}
-            {{- end }}   
+            - name: {{ .Values.examplemap.name }}
+              value: {{ .Values.examplemap.value }}
+          
            # - name: POSTGRESQL_PASSWORD
            #   value: "Password@123"
           ports:
