--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,9 +19,10 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: {{ .Values.examplemap.name | quote }}
-              value: {{ .Values.examplemap.value | quote }}
-          
+            {{- range .Values.examplemap }}         --Iteration begins over here
+            - name: {{ .name }}
+              value: {{ .value }}
+            {{- end }}
            # - name: POSTGRESQL_PASSWORD
            #   value: "Password@123"
           ports:
