--- a/ui-helm/templates/deployment.yaml
+++ b/ui-helm/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{- range .Values }}         --Iteration begins over here
-            #- name: {{ .name }}
+            {{- range .Values.env }}         --Iteration begins over here
+             - name: {{ .name }}
              - value: {{ .value }}
             {{- end }}
            # - name: POSTGRESQL_PASSWORD
