--- a/app/templates/deployment.yaml
+++ b/app/templates/deployment.yaml
@@ -3,6 +3,11 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-deployment
   namespace: {{ .Values.namespace }}
+  annotations:
+#{{ toYaml .Values.service.ANNOTATIONS | indent 4 }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Values.namespace}}
   labels:
     {{- include "ui-helm.labels" . | nindent 4 }}
 spec:
@@ -20,9 +25,12 @@ spec:
           image: {{ .Values.image.repository | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{- range .Values.examplemap }}
-            - name: {{ .name }}
-              value: {{ .value }}
-            {{- end }} 
+          - name: DB_HOST
+            value: {{ template "ui-helm.fullname" . }}
+          - name: DB_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: {{ template "ui-helm.secrets" . }}
+                key: db-password 
           ports:
             - containerPort: {{ .Values.service.targetport }}
